--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <header class="headerMain">
     
-    <nav class="navbar navbar-expand-sm navbar-light navbarMain">
+    <nav class="navbar navbar-expand-sm navbar-light navbarMain articlsMain_navbar">
       <div id="navbarText">
         <ul class="navbar-nav">
           <li class="nav-item active">
