contact.html créé, c'est en cours

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a class="nav-link" href="#">Գլխավոր<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">ԿԱՊ</a>
+            <a class="nav-link" href="page/contact.html">ԿԱՊ</a>
           </li>
         </ul>
       </div>
@@ -68,7 +68,7 @@
     <div class="col-md-3 category1 categoryContainer_titleSubline">
       <h2 class="card-title titleSublineCustom-underline">Բազմոցներ</h2>
       <div class="category-hover">
-        <a href="#">
+        <a href="page/canapes.html">
           <img src="img/mainimg/canape.jpg" class="card-img-top" alt="...">
         </a>
       </div>
